fixed 'breadcrumb "Comments" is misaligned'

--- a/css/webrunes.css
+++ b/css/webrunes.css
@@ -308,7 +308,7 @@ ul.leaders span + span{float:right;background:white}
 /* Twitter */
 .twitter{clear:both}
 .twitter-limit{color:#aaa}
-.twitter-timeline{width:100% !important}
+.twitter-timeline{max-width:100% !important}
 .autosized-media{width:auto!important;height:auto!important}
 
 
